Revert "fix: lighter checkbox background (rgb 94,80,98) for higher contrast"
This reverts commit 4a2283c559de8a808e31c95a6774bbb98b11dd66.

--- a/scss/module.scss
+++ b/scss/module.scss
@@ -218,7 +218,6 @@
         margin: 0;
         cursor: pointer;
         accent-color: #777;
-        background-color: #5e5062;
     }
 }
 
@@ -271,7 +270,6 @@
         margin: 0;
         cursor: pointer;
         accent-color: #777;
-        background-color: #5e5062;
     }
 }
 
@@ -327,7 +325,6 @@
         margin: 0;
         cursor: pointer;
         accent-color: #777;
-        background-color: #5e5062;
     }
 
     .qc-feature-name {
